fixed Layout overflow and code overflow

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: #212121;
 }
 
 .hero-cont {
